@@ -2,13 +2,13 @@ package com.edu.platform.audit;
 
 import com.edu.platform.common.ApiResponse;
 import com.edu.platform.common.PageResponse;
+import java.time.OffsetDateTime;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.time.OffsetDateTime;
-import java.util.List;
 
 @RestController
 @RequestMapping("/api/audit/logs")
@@ -21,7 +21,7 @@ public class AuditLogController {
             @RequestParam(required = false) String actor,
             @RequestParam(required = false) String action
     ) {
-        List<AuditLogResponse> logs = List.of(
+        List<AuditLogResponse> logs = Arrays.asList(
                 new AuditLogResponse("log-1", "admin", "CREATE", "content:cnt-1", OffsetDateTime.now()),
                 new AuditLogResponse("log-2", "editor", "UPDATE", "menu:m-2", OffsetDateTime.now())
         );
