@@ -1,14 +1,13 @@
 package com.edu.platform.auth;
 
 import com.edu.platform.common.ApiResponse;
-import jakarta.validation.Valid;
+import java.util.Arrays;
+import javax.validation.Valid;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -16,7 +15,7 @@ public class AuthController {
 
     @PostMapping("/login")
     public ApiResponse<LoginResponse> login(@Valid @RequestBody LoginRequest request) {
-        LoginResponse response = new LoginResponse("u-1000", request.username(), "demo-token");
+        LoginResponse response = new LoginResponse("u-1000", request.getUsername(), "demo-token");
         return ApiResponse.success(response);
     }
 
@@ -27,7 +26,8 @@ public class AuthController {
 
     @GetMapping("/profile")
     public ApiResponse<UserProfile> profile() {
-        UserProfile profile = new UserProfile("u-1000", "Demo Admin", "ADMIN", List.of("site:read", "content:write"));
+        UserProfile profile = new UserProfile("u-1000", "Demo Admin", "ADMIN",
+                Arrays.asList("site:read", "content:write"));
         return ApiResponse.success(profile);
     }
 }
