@@ -1,7 +1,9 @@
 package com.edu.platform.site;
 
 import com.edu.platform.common.ApiResponse;
-import jakarta.validation.Valid;
+import java.util.Arrays;
+import java.util.List;
+import javax.validation.Valid;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -11,15 +13,13 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-
 @RestController
 @RequestMapping("/api/site/categories")
 public class CategoryController {
 
     @GetMapping
     public ApiResponse<List<CategoryResponse>> listCategories() {
-        List<CategoryResponse> categories = List.of(
+        List<CategoryResponse> categories = Arrays.asList(
                 new CategoryResponse("c-1", "News", "news", "Latest announcements", 1),
                 new CategoryResponse("c-2", "Courses", "courses", "Course catalog", 2)
         );
@@ -28,8 +28,9 @@ public class CategoryController {
 
     @PostMapping
     public ApiResponse<CategoryResponse> createCategory(@Valid @RequestBody CategoryRequest request) {
-        CategoryResponse response = new CategoryResponse("c-new", request.name(), request.slug(), request.description(),
-                request.order() == null ? 0 : request.order());
+        int order = request.getOrder() == null ? 0 : request.getOrder();
+        CategoryResponse response = new CategoryResponse("c-new", request.getName(), request.getSlug(),
+                request.getDescription(), order);
         return ApiResponse.success(response);
     }
 
@@ -38,8 +39,9 @@ public class CategoryController {
             @PathVariable String categoryId,
             @Valid @RequestBody CategoryRequest request
     ) {
-        CategoryResponse response = new CategoryResponse(categoryId, request.name(), request.slug(),
-                request.description(), request.order() == null ? 0 : request.order());
+        int order = request.getOrder() == null ? 0 : request.getOrder();
+        CategoryResponse response = new CategoryResponse(categoryId, request.getName(), request.getSlug(),
+                request.getDescription(), order);
         return ApiResponse.success(response);
     }
 
