@@ -1,7 +1,9 @@
 package com.edu.platform.site;
 
 import com.edu.platform.common.ApiResponse;
-import jakarta.validation.Valid;
+import java.util.Arrays;
+import java.util.List;
+import javax.validation.Valid;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -11,15 +13,13 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-
 @RestController
 @RequestMapping("/api/site/menus")
 public class MenuController {
 
     @GetMapping
     public ApiResponse<List<MenuItemResponse>> listMenus() {
-        List<MenuItemResponse> items = List.of(
+        List<MenuItemResponse> items = Arrays.asList(
                 new MenuItemResponse("m-1", "Dashboard", "/dashboard", "home", 1),
                 new MenuItemResponse("m-2", "Content", "/content", "file", 2)
         );
@@ -28,8 +28,9 @@ public class MenuController {
 
     @PostMapping
     public ApiResponse<MenuItemResponse> createMenu(@Valid @RequestBody MenuItemRequest request) {
-        MenuItemResponse response = new MenuItemResponse("m-new", request.name(), request.path(), request.icon(),
-                request.order() == null ? 0 : request.order());
+        int order = request.getOrder() == null ? 0 : request.getOrder();
+        MenuItemResponse response = new MenuItemResponse("m-new", request.getName(), request.getPath(),
+                request.getIcon(), order);
         return ApiResponse.success(response);
     }
 
@@ -38,8 +39,9 @@ public class MenuController {
             @PathVariable String menuId,
             @Valid @RequestBody MenuItemRequest request
     ) {
-        MenuItemResponse response = new MenuItemResponse(menuId, request.name(), request.path(), request.icon(),
-                request.order() == null ? 0 : request.order());
+        int order = request.getOrder() == null ? 0 : request.getOrder();
+        MenuItemResponse response = new MenuItemResponse(menuId, request.getName(), request.getPath(),
+                request.getIcon(), order);
         return ApiResponse.success(response);
     }
 
