@@ -1,7 +1,9 @@
 package com.edu.platform.system;
 
 import com.edu.platform.common.ApiResponse;
-import jakarta.validation.Valid;
+import java.util.Arrays;
+import java.util.List;
+import javax.validation.Valid;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -10,15 +12,13 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-
 @RestController
 @RequestMapping("/api/system/configs")
 public class SystemConfigController {
 
     @GetMapping
     public ApiResponse<List<SystemConfigResponse>> listConfigs() {
-        List<SystemConfigResponse> configs = List.of(
+        List<SystemConfigResponse> configs = Arrays.asList(
                 new SystemConfigResponse("site.title", "Edu Platform", "Homepage title"),
                 new SystemConfigResponse("site.theme", "light", "Theme mode")
         );
@@ -33,7 +33,8 @@ public class SystemConfigController {
 
     @PostMapping
     public ApiResponse<SystemConfigResponse> createConfig(@Valid @RequestBody SystemConfigRequest request) {
-        SystemConfigResponse response = new SystemConfigResponse(request.key(), request.value(), request.description());
+        SystemConfigResponse response = new SystemConfigResponse(request.getKey(), request.getValue(),
+                request.getDescription());
         return ApiResponse.success(response);
     }
 
@@ -42,7 +43,8 @@ public class SystemConfigController {
             @PathVariable String configKey,
             @Valid @RequestBody SystemConfigRequest request
     ) {
-        SystemConfigResponse response = new SystemConfigResponse(configKey, request.value(), request.description());
+        SystemConfigResponse response = new SystemConfigResponse(configKey, request.getValue(),
+                request.getDescription());
         return ApiResponse.success(response);
     }
 }
